# twig

./: README  runtest.rb  twig.cabal
doc/: Guide.html  Guide.txt  Location Rewriting.graffle  Notes.txt  Reppy.txt
examples/: runtest.rb
examples/experiments/: ackerman.rules
examples/jni/: .gitignore  Hello.c  build.sh  clean.sh
examples/malloc/: array.c  tree.c
examples/rewriting/: ackerman.rules  ackerman.terms  ackerman.trs  ackermann.rules  ackermann.terms  choice.rules  cnf.rules  cnf.terms  compare.rules  compare.terms  ex1.trs  ex2.trs  ex3.rules  ex3.terms  ex3.trs  ex4.trs  fix.rules  fix.terms  logic.rules  logic.terms  path.rules  path.terms  run.rb  simple.rules  simple.terms  typemap.rules  typemap.terms
examples/swig/: build.sh  routines.h
experimental/codegen/: codegen.cabal
experimental/codegen/examples/: Example.txt  Test.c
experimental/codegen/src/: CodeGen.hs  Main.hs  Snip.hs  Supply.hs
experimental/gpu/: gpu.c
experimental/gpu-demo/: README  build.rb  build.xml
experimental/invertible/: inv.cabal
experimental/invertible/src/: Env.hs  Expr.hs  Lexer.hs  Main.hs  Parser.hs  Term.hs
experimental/malloc/: tree.c
experimental/maude-reduction/: Expr.maude  README  Test.maude
experimental/multi-lang-demo/: Address.py  demo.twig  target.c  target.py  test.twig
experimental/python-ffi/: Address.py  build.sh  github_commits.c  test.twig
experimental/swig/: .gitignore  clean.sh  routines.i
impl/: twig.cabal
impl/block/: block.cabal
impl/codegen/: block.cabal
impl/codegen/src/Block/Lang/: C.hs
impl/examples/: Array.twig  PaperExample.twig  Polar.c  Polar.twig  PythonWrapper1.twig  Test.twig  ackermann.rules  array.rules  array.terms  compare.terms  functor.rules  path.terms  simple.terms  typemap.rules
impl/src/: AST.hs  Lexer.hs  Main.hs  Parser.hs  RuleExpr.hs
impl/top/: twig.cabal
papers/: CFPS
papers/compose-talk-august-2011/: README  twig-talk.tex
papers/europar/: .gitignore  CFPS  abstract.tex  europar-review-comments.txt  twig-gpu.tex
papers/europar12/: example.tex  semantics.tex
papers/gpce12/: Makefile  evaluation.tex  expressions.tex  gpce-review-comments.txt  implementation.tex  operators.tex  semantics.tex  twig-language.tex  values.tex
src/: Code.hs  CodeGen.hs  Env.hs  GenSym.hs  Lexer.hs  Main.hs  MonadWriter.hs  Parser.hs  Rule.hs  RuleExpr.hs  Strategy.hs  StringSub.hs  Supply.hs  Term.hs  TypeMap.hs  Typemap.hs  Util.hs
(+284 files in other folders)
