Name:           Twig
Version:        0.2
Cabal-Version:  >= 1.2
License:        BSD3
Author:         Geoff Hulette
Synopsis:       Term-reWriting Interface Generator
Build-Type:     Simple
  
Executable rewrite
  Main-Is:        Rewriting/Main.hs
  Hs-Source-Dirs: src
  Build-Depends:  base >= 4,array,parsec >= 2,containers
  GHC-Options:    -O2 -Wall

Executable demo
  Main-Is:        Main.hs
  Hs-Source-Dirs: src
  Build-Depends:  base >= 4,array,containers,mtl
  GHC-Options:    -O2 -Wall
