Name:           Twig
Version:        0.4
Cabal-Version:  >= 1.2
License:        BSD3
Author:         Geoff Hulette
Synopsis:       Term-reWriting Interface Generator
Build-Type:     Simple
  
Executable twig
  Main-Is:        Main.hs
  Hs-Source-Dirs: src
  Build-Depends:  base >= 4, parsec >= 3.1, containers, monad-supply
  GHC-Options:    -O2 -Wall
