Name:           Block
Version:        0.1
Cabal-Version:  >= 1.2
License:        BSD3
Author:         Geoff Hulette
Maintainer:     ghulette@cs.uoregon.edu
Synopsis:       Abstract code generation
Build-Type:     Simple
  
Library
  Exposed-modules: Block,Block.Lang.C
  Hs-Source-Dirs:  src
  Build-Depends:   base >= 4,containers
  GHC-Options:     -O2 -Wall
